[tool.poetry]
name = "blockchainetl"
version = "0.1.0"
description = ""
authors = ["Truong Ma Phi <trmaphi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fsspec = "*"
google-cloud-pubsub = {version = "==2.13.0", optional = true}
google-cloud-storage = {version = "==1.33.0", optional = true}
grpcio = {version = "==1.46.3", optional = true}
kafka-python = {version = "==2.0.2", optional = true}
libcst = {version = "==0.3.21", optional = true}
pg8000 = {version = "==1.16.6", optional = true}
pyarrow = "*"
python-dateutil = "<3,>=2.8.0"
requests = "*"
sqlalchemy = {version = "==1.4", optional = true}
timeout-decorator = {version = "==0.4.1", optional = true}
s3fs = "^2023.6.0"

[tool.poetry.dev-dependencies]
pytest = "==4.3.*,>=4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
